[tool.poetry]
name = "pycommander"
version = "0.1.0"
description = "Auto bioinformatics workflow frame"
authors = ["zanyuan <seqyuan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
